tests/idris2/error/error017/Issue962.idr
foo : List Char -> ()
foo cs = case cs of
  "bar" => ()
  _ => ()
